Fix alignment bug in activity table results.

--- a/UCosmic.Web.Mvc/styles/sass/sheets/employees/activities-table.scss
+++ b/UCosmic.Web.Mvc/styles/sass/sheets/employees/activities-table.scss
@@ -162,12 +162,12 @@ body {
     }
 
     td.locations-column {
-        vertical-align: top;
+        vertical-align: top!important;
         min-width: 120px;
     }
 
     td.person-column {
-        vertical-align: top;
+        vertical-align: top!important;
         min-width: 120px;
     }
 }
